Allow Parabox to be moved, and allow for time loops to fail and be reset.

--- a/src/main/resources/assets/parabox/lang/en_US.lang
+++ b/src/main/resources/assets/parabox/lang/en_US.lang
@@ -11,6 +11,7 @@ info.parabox.duplicate=You already have Parabox placed in the world.
 
 #Status
 parabox.status.backup=This world has been put in a time loop. All progress in this world should be considered temporary until the time loop has closed. 
+parabox.status.backup.reset=There are no active Parabox devices! The previous time loop could not be maintained, and a new one must be created.
 parabox.status.power=Power: %s
 parabox.status.target=Target Power: %s
 parabox.status.missing=Power Deficit: %s
